# DrOwl

./: .gitignore  Dockerfile  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_07_20_1252-e55e23c7b433_create_user_model_and_document_model.py  2025_07_21_1810-57d6351b4f8a_add_email_to_user.py  2025_07_24_1308-48125cb10225_add_null_to_processed_text.py
app/: main.py  schemas.py
app/api/: clients.py  deps.py  exceptions.py  managers.py  utils.py
app/api/routers/: __init__.py  auth.py  documents.py  users.py
app/core/: config.py  database.py
app/crud/: users_crud.py
app/models/: __init__.py  documents.py  mixins.py  users.py
