[project]
name = "dr-owl-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "faststream>=0.5.47",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "ruff>=0.12.3",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
