[project]
name = "dr-owl-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "elasticsearch>=9.0.2",
    "fastapi>=0.116.1",
    "faststream[rabbit]>=0.5.47",
    "minio>=7.2.16",
    "passlib>=1.7.4",
    "pdf2image>=1.17.0",
    "poppler-utils>=0.1.0",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "ruff>=0.12.3",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
